<resources>
    <string name="app_name">Vehicle Management</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="register_now">Register Now</string>
    <string name="user_name">User Name</string>
    <string name="contact">Contact</string>
    <string name="register">Register</string>
    <string name="password_note">Password Should Contain Atleast \n1 Uppercase value \n1 Lowercase value\n1 Numeric Value\n1 Special Character</string>
    <string name="add">Add</string>
    <string name="refuel">Refuel</string>
    <string name="view_vehicles">View Vehicles</string>
    <string name="service">Service</string>
    <string name="delete">Delete</string>
    <string name="mileage">Mileage</string>
    <string name="owner_name">Owner Name</string>
    <string name="Rs">\u20B9</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="vehicle_type">
        <item>Car</item>
        <item>Bus</item>
        <item>Motorcycle</item>
        <item>Lorry</item>
    </string-array>
    <string-array name="vehicle_manufacturers">
        <item>Ashok Leyland</item>
        <item>Bajaj</item>
        <item>Eicher</item>
        <item>Force Motors</item>
        <item>Hero</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Isuzu</item>
        <item>Mahindra</item>
        <item>Tata</item>
        <item>Mazda</item>
        <item>Mercedes Benz</item>
        <item>Nissan</item>
        <item>Toyota</item>
        <item>TVS</item>
        <item>Volvo</item>
        <item>Others</item>
    </string-array>
    <string-array name="fuel_types">
        <item>Petrol</item>
        <item>Diesel</item>
        <item>LPG</item>
        <item>Electric</item>
    </string-array>
    <string-array name="service_types">
        <item>Select Service</item>
        <item>Air Conditioning</item>
        <item>Air Filter</item>
        <item>Battery</item>
        <item>Belts</item>
        <item>Brakes</item>
        <item>Cooling System</item>
        <item>Electronics</item>
        <item>Fuel Filter</item>
        <item>Lights</item>
        <item>New Tires</item>
        <item>Oil Change</item>
        <item>Oil Filter</item>
        <item>Washing</item>
        <item>Wheel Alignment</item>
        <item>Others</item>
    </string-array>
    <string-array name="other_expenses">
        <item>Select Service</item>
        <item>Insurance</item>
        <item>Tolls</item>
        <item>Fine</item>
        <item>Fitness Certification</item>
        <item>Tax</item>
        <item>Others</item>
    </string-array>
    <string-array name="expenses_types">
        <item>All</item>
        <item>Refuel</item>
        <item>Service</item>
        <item>Salary</item>
        <item>Others</item>
    </string-array>
    <string name="salary_period">Salary Period</string>
    <string name="salary_type">Salary Type:</string>
    <string-array name="report_types">
        <item>This Month</item>
        <item>3 Month\'s</item>
        <item>6 Month\'s</item>
        <item>1 Year</item>
        <item>Custom</item>
    </string-array>
    <string name="imageviewcontent">ImageViewContent</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="add_driver">Add Driver</string>
    <string name="expense">Expense</string>
    <string name="home">Home</string>
    <string name="vehicles">Vehicles</string>
    <string name="drivers">Drivers</string>
    <string name="report">Report</string>
    <string name="backbtn">BackBtn</string>
    <string name="save">Save</string>
    <string name="driver_name">Driver Name</string>
    <string name="license_number">License Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="salary">Salary</string>
    <string name="log_out">Log Out</string>
    <string name="fuel_prices">Fuel Prices</string>
    <string name="settings">Settings</string>
</resources>