<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_fuel_price"
        android:icon="@drawable/drop_24"
        android:title="@string/fuel_prices"
        android:iconTint="#2196F3"
        android:titleTextColor="#2196F3" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"
        android:iconTint="#2196F3"
        android:titleTextColor="#2196F3" />

    <item
        android:id="@+id/nav_log_out"
        android:icon="@drawable/logout_24"
        android:title="@string/log_out"
        android:iconTint="#2196F3"
        android:titleTextColor="#2196F3" />

</menu>
